--- a/pages/p1/954995.md
+++ b/pages/p1/954995.md
@@ -1,4 +1,4 @@
-### 菅义伟将跟习近平通话 讨论中日关系(图)
+### 小粉红崩溃 韩综艺节目并列五星旗与中华民国国旗(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="日本新首相菅义伟" src="https://img3.secretchina.com/pic/2020/9-22/p2781021a100829047-ss.jpg" style="height:400px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="《Running Man》节目游戏将代表台湾的青天白日满地红旗，与代表中共的五星旗并列。（图片来源：撷取自微博）" src="https://img3.secretchina.com/pic/2020/12-7/p2833511a593550311-ss.jpg"/>
   <br>
-   日本新首相菅义伟（图片来源：NICOLAS DATICHE/POOL/AFP via Getty Images）
+   《Running Man》节目游戏将代表台湾的青天白日满地红旗，与代表中共的五星旗并列。（图片来源：撷取自微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,63 +21,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月23日讯】
+  【看中国2020年12月7日讯】（看中国记者苗薇综合报导）
   <strong>
-   日本首相菅义伟
-  </strong>
-  和中国国家主席
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/韩国" target="_blank">
+    韩国
    </span>
   </strong>
-  计划星期五（9月25日）举行电话会谈。日本媒体共同社星期二（9月22日）报道，菅义伟正在为这次通话展开最后的协调。多名日本政府消息人士向共同社透露了相关消息。
+  大受欢迎的
+  <strong>
+   综艺节目
+  </strong>
+  《Running Man》最新一集节目游戏将代表台湾的青天白日满地红旗，与代表中共的五星旗并列，引发中国
+  <strong>
+   小粉红
+  </strong>
+  的不满，甚至被扣上“辱华”帽子。韩媒称中国网友找茬。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这几位未具名政府消息人士称，会谈旨在进一步扩大两国关系。据共同社报道，预计两国领导人还将讨论习近平对
-  <span href="https://www.secretchina.com/news/gb/tag/日本" target="_blank">
-   日本
+  综合媒体报导，《Running Man》在最新一集节目内的国际版的“大富翁”游戏，制作单位将台湾放在中国旁边，独立列出来，还放上中华民国国旗，放在五星旗旁边，该事件曝光后，大陆
+  <span href="https://www.secretchina.com/news/gb/tag/小粉红" target="_blank">
+   小粉红
   </span>
-  的国事访问。
+  认为节目此举又是“辱华”，《RM》的做法等于承认“台湾是国家”，相关争议也登上了微博热搜。之后中国各大影音平台纷纷下架，包括盗版影片网站。
  </p>
  <p>
-  习近平原定今年4月访问日本，由于新冠病毒疫情，他的访日计划被推迟。时任日本官房长官的
-  <span href="https://zh.wikipedia.org/zh/%E8%8F%85%E4%B9%89%E4%BC%9F" target="_blank">
-   菅义伟
-  </span>
-  在3月5日的记者会上表示，两国决定在双方都认为合适的时候，通过外交渠道协调习近平的访日行程。
- </p>
- <p>
-  观察人士注意到，这将是日本
-  <span href="https://www.secretchina.com/news/gb/tag/首相" target="_blank">
-   首相
-  </span>
-  与中国国家主席2018年5月以来首次通电话。前首相安倍晋三那一年的5月4日跟习近平通话，就两国关系进行沟通。
- </p>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/菅义伟" target="_blank">
-   菅义伟
-  </span>
-  据报希望通过电话会谈明确表达重视中国的意图。据称习近平也期待日中关系发展。
- </p>
- <p>
-  分析人士指出，对菅义伟而言，在美中紧张关系加剧的情况下，他需要在日本与美国和
+  有大陆网友要求节目企划和主持人道歉，还有网友哀嚎并批评“看来节目组好像也不太需要
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  之间的关系上保持微妙平衡。这也正是菅义伟在通话之前需要认真思考的课题。
+  观众了”。
+ </p>
+ <p>
+  不过也有网友说：“我对韩国节目出现青天白日满地红旗没什么多余看法，我只知道在比站绝对过不了审，所以这期rm我是看不到了”、“当中国人好累，天天得抵制，之前抵制防弹少年团，现在又得抵制rm了”等等。
+ </p>
+ <p>
+  事件也引发台湾网友关注，在相关网络新闻留言，酸大陆人玻璃心又碎了，建议关门锁国，还有人直呼大韩民国万岁，全世界最容易感到屈辱的，是大陆人，最容易被颠覆的政权是共产党，韩国
+  <span href="https://www.secretchina.com/news/gb/tag/综艺节目" target="_blank">
+   综艺节目
+  </span>
+  《Running Man》开播超过十年，海内外拥有大批粉丝，没想到却因为游戏道具，台湾国旗和五星旗摆一起，让大陆网友气到炸锅，更是制作单位始料未及。
+ </p>
+ <p>
+  据韩联社12月7日报导，在6日播出的节目中，演出人员在玩“Blue Marble”的游戏环节时，出现了五星旗和中华民国国旗并列的画面。而韩联社在报导此事中称中国网友在找茬。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -92,7 +89,7 @@
   </div>
  </center>
  <p>
-  日本跟中国长期以来在一些问题上也存在不少分歧，包括两国在东中国海岛屿的领土争端。预计，在电话会谈中，双方或将围绕中国公务船驶入尖阁诸岛（中国称钓鱼岛）附近海域，以及香港问题交换意见。双方还将就合作应对新冠疫情的设想达成一致。
+  据了解，韩国SBS电视台推出的《running man》自2010年开播以来一直深受韩国观众喜爱，在中国也拥有大批粉丝。2014年10月，在浙江卫视首播的《奔跑吧兄弟》也是引进韩国《Running Man》版权，节目同样收获大批粉丝。不过由于中国限韩令影响，2017年起爱奇艺、优酷土豆撤下全部拥有版权的《running man》集数，许多网友观看的皆是盗版影片。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -107,7 +104,7 @@
   </div>
  </center>
  <p>
-  菅义伟上星期成为日本近八年来的第一位新领导人，上任后一直在与世界各国领导人通电话。菅义伟和美国总统特朗普于9月20日首次通话，双方同意进一步加强日美安全联盟，共同应对冠状病毒大流行。
+  近期韩国李孝利、BTS等艺人，都曾因触碰到大陆小粉红的敏感神经而在网络上遭到骚扰或呛声抵制。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +136,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -171,13 +168,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/947008.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/947008.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/947008.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/23/947008.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954995.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954995.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954995.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/954995.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/947008.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954995.md' width='0px' height='0px'/>
