--- a/pages/p9/954936.md
+++ b/pages/p9/954936.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### “最后一掷”：英国与欧盟重启谈判(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="英国 约翰逊 欧盟 冯德莱恩 布鲁塞尔" src="https://img3.secretchina.com/pic/2020/5-5/p2683642a851480636-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   欧盟委员会主席乌尔苏拉·冯·德·莱昂（Ursula von der Leyen）（图片来源：OLIVIER HOSLET/EPA/AFP/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,76 +29,69 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月7日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
+    英国
    </span>
   </strong>
-  是先人
+  首相
   <strong>
-   智慧
+   约翰逊
   </strong>
-  的
+  和
   <strong>
-   结晶
+   欧盟
   </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  的谈判人
+  <strong>
+   冯德莱恩
+  </strong>
+  星期天（12月6日）在比利时
+  <strong>
+   布鲁塞尔
+  </strong>
+  举行会议进行最后努力，试图在12月31日过渡协议终止之前达成脱欧后的贸易协议。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  <span href="https://zh.wikipedia.org/wiki/%E8%8B%B1%E5%9B%BD" target="_blank">
+   英国
+  </span>
+  首相
+  <span href="https://zh.wikipedia.org/wiki/%E9%B2%8D%E9%87%8C%E6%96%AF%C2%B7%E7%BA%A6%E7%BF%B0%E9%80%8A" target="_blank">
+   鲍里斯·约翰逊
+  </span>
+  （Boris Johnson）和
+  <span href="https://zh.wikipedia.org/wiki/%E6%AC%A7%E6%B4%B2%E8%81%94%E7%9B%9F" target="_blank">
+   欧盟
+  </span>
+  委员会主席
+  <span href="https://zh.wikipedia.org/wiki/%E4%B9%8C%E5%B0%94%E8%8B%8F%E6%8B%89%C2%B7%E5%86%AF%E5%BE%B7%E8%8E%B1%E6%81%A9" target="_blank">
+   冯德莱恩
+  </span>
+  （Ursula von der Leyen）周六发表讲话，并指示双方团队开始恢复会谈，周五谈判暂停。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  <span href="https://www.secretchina.com/news/gb/tag/约翰逊" target="_blank">
+   约翰逊
+  </span>
+  和冯德莱恩在电话会议后发表的一份联合声明中说，如果不能解决在治理、渔权、和竞争规则（即公平竞争环境）这三个棘手议题上的分歧，那么没有任何协议是可行的。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  一名熟悉有关谈判的英方消息来源表示：“这将会是最后一掷。”
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  <span href="https://www.secretchina.com/news/gb/tag/欧盟" target="_blank">
+   欧盟
+  </span>
+  英国脱欧谈判代表米歇尔·巴尼耶（Michel Barnier）表示，周日与英国代表戴维·弗罗斯特（David Frost）进行的会谈将表明是否可以达成新的贸易协议。
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  据泰晤士报报道，约翰逊的大多数部长都愿意支持他，如果他认为谈判结果不符合英国的利益。13名内阁，包含反对退出欧盟的阁员，都已经证实会这么做。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +106,7 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  农村事务大臣乔治·尤斯蒂奇（George Eustice）星期天在天空新闻台（Sky News) 的专访中也表示支持。尤斯蒂奇表示，英国已经为谈判未果做出大量准备，并且也已经准备好要经历那样的情景。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +121,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  尤斯蒂奇说：“直到这些协商都没有必要再继续下去之前，我们将会持续进行这些谈判。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +136,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  然而，近年来在英国脱欧谈判的关键人物爱尔兰外长西蒙·柯文尼(Simon Coveney)表示，英国政府暗示他们可以处理协商破局的说法并不可信。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,31 +151,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  柯文尼提出一个更加乐观的观点，他非常强烈的认为双方可以达成协议谈判。柯文尼对爱尔兰的《星期日独立报》说：“我们更有可能达成协议。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +170,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  在协议可以在本周早些时候出台的希望消失之后，谈判于周五暂停。英国谈小组表示，欧盟方提出了许多与其主权不相容的要求，并且警告说，谈判可能会没无果而终。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +185,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  柯文尼否认欧盟方曾经强化过他们的立场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +200,11 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  在英国及其前欧盟伙伴正在努力应对
+  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
+   新冠病毒
+  </span>
+  (又称中共病毒，COVID-19)大流行带来的经济损失之际，如果未能达成协议，英国历经五年的脱欧将以混乱的局面结束。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,26 +219,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  专家警告说，协商无果将对英国经济造成长期的巨大破坏。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +283,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954936.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954936.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954936.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/954936.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/954936.md' width='0px' height='0px'/>
