--- a/pages/p9/955003.md
+++ b/pages/p9/955003.md
@@ -1,4 +1,4 @@
-### 青岛爆发疫情 习悬了；脱下国王新衣？三胖泪歉人民(视频)
+### 美国罗马尼亚后 英国也发现了神秘金属
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,42 +6,44 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <div id="story_video" style="text-align: center;margin-top: 20px;">
- </div>
  <p>
-  大家好，我是启明。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
+  【看中国2020年12月7日讯】据英媒7日消息，有人在英国怀特岛的康普顿海滩上发现了一个神秘的
+  <span href="https://www.secretchina.com/news/gb/tag/金属" target="_blank">
+   金属
   </span>
+  物体，当这个物体出现在康普顿海滩的悬崖底部时，岛上居民们为此感到困惑。巧合的是，在上个月，罗马尼亚北部的山上和美国犹他州沙漠中都曾出现相似的神秘金属，随后突然消失。
+  <br>
+   <br>
+    据英国《太阳报》消息，31岁的艾米·布莱克本（Ami Blackburn）在社交媒体上发现金属物体的照片，决定前往调查，并打算与自己的儿子和男朋友拍张合影。同时，她还看到了一些留言称这张照片可能经过了PS处理。
+    <br>
+     <br>
+      布莱克本是怀特岛纽波特市的一名医疗助理，她表示，当自己第一次看到巨石时感觉很不寻常，并立即研究了此前在美国和罗马尼亚发现的金属物体。她称“它的一部分被掩埋在地下，需要把一些沙子从巨石底部移开。”当她和家人移开沙子后发现，这个物体是木制的，另一面贴着类似镜子一样材质的东西。
+      <br>
+       <br>
+        布莱克本称“我很喜欢这个想法，像是外星人送来的建筑，但这更像是一个不寻常的艺术项目。但是2020年还能再不寻常一点吗？”
+        <span id="hideid" name="hideid" style="color:red;display:none;">
+         <span href="https://www.secretchina.com">
+         </span>
+        </span>
+       </br>
+      </br>
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
- <p>
-  喜欢我的频道，欢迎点赞，订阅，评论，并开启小铃铛🔔就可在第一时间观看精彩内容哦〜
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
- </p>
- <p>
-  【订阅频道】
-  <br>
-   <span href="https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw">
-    https://www.youtube.com/channel/UCLJYH0o60tlyAdy3g5GNrKw
-   </span>
-  </br>
- </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -60,9 +62,13 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
+  </span>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -80,13 +86,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949109.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949109.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949109.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949109.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955003.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955003.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955003.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/955003.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949109.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/955003.md' width='0px' height='0px'/>
