--- a/pages/nsc418/n12601102.md
+++ b/pages/nsc418/n12601102.md
@@ -1,4 +1,4 @@
-### 【大选更新12.7】专家从统计学上驳斥拜登获胜
+### 【大选更新12.7】参议员：支持舞弊调查
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -19,7 +19,7 @@
  <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
   美国大选
  </ok>
- 搅动世界，甚至牵动各国，几乎无人能置身事外。面对名目张胆的
+ 搅动世界，几乎无人能置身事外。名目张胆的
  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
   大选舞弊
  </ok>
@@ -63,6 +63,26 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 参议员：支持选举舞弊调查 必须走完法律程序
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12594768" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/Sen-Mike-Braun-1200x800.jpg">
+  <img alt="" class="size-large wp-image-12594768" src="https://i.epochtimes.com/assets/uploads/2020/12/Sen-Mike-Braun-1200x800-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为印第安纳州共和党参议员迈克•布劳恩（Mike Braun）。（Samuel Corum/Getty Images）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国印第安纳州共和党参议员麦克‧布劳恩（Mike Braun）支持调查总统大选中的欺诈行为。他说，半个国家都对选举结果“不确定”，所以必须让法律程序发挥作用。
+</p>
+<p>
+ “如果你不把它（法律程序）进行到底，你就会对未来感到不安。”他上周日接受ABC采访时说，“如果你连一个敷衍的调查都不想进行，那么不管是12月14日还是之后发生什么事，会有很大一部分人，超过50%的人认为事情不对劲，而且这将继续破坏民主。”
+</p>
+<p>
+ 上周，布劳恩在《华盛顿观察家》（Washington Examiner）的专栏文章中谴责媒体 “从根本上”辜负了美国人民，因为它们“拒绝调查任何有关2020选举中大量邮寄选票的诚信问题，还不理会所有对有记录的选举违规行为的担忧，视之为阴谋论。”
+</p>
 <h3>
  专家：
  <ok href="https://www.epochtimes.com/gb/tag/%E6%8B%9C%E7%99%BB.html">
