--- a/pages/nsc412/n12601102.md
+++ b/pages/nsc412/n12601102.md
@@ -64,6 +64,27 @@
  情况的实时更新：
 </h4>
 <h3>
+ 铁杆川粉：爆炸物袭击我家 或因我支持川普
+</h3>
+<p>
+ 据美国媒体报导，上周六（5日）早上，密歇根州一名男子家中被投掷至少一枚爆炸物。这名男子表示，这可能是因为他是川普（特朗普）铁杆粉丝的缘故。
+</p>
+<p>
+ 底特律Fox 2报导，圣克莱尔海岸（St. Clair Shores）这位希望保持匿名的房主表示，爆炸发生时，他和女友正在楼上一间卧室里；爆炸炸裂了石膏板（drywall）、震碎了玻璃，并导致天花板出现裂缝。
+</p>
+<p>
+ 据底特律Fox 2报导，事故现场的监视录像显示，一名男子跑到他家，通过前窗扔了一枚爆炸物。另一段录像拍摄到一名男子从一辆皮卡里跑出，扔了第二枚爆炸物。
+</p>
+<p>
+ 被问及为何有人把他家作为袭击目标时，他暗示这可能是因为他的政治信仰。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/7/n12601773.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
  州长不赞成特别会议 乔州议员：无需他认可
 </h3>
 <p>
