同步于: 12月8日2时2分

--- a/pages/p1/955028.md
+++ b/pages/p1/955028.md
@@ -1,4 +1,4 @@
-### 赵立坚证实：澳籍作家杨恒均以间谍罪被公诉(图)
+### 反制北京夺权 美国再制裁14名中共官员(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/12-2/p2574101a829161699-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="华春莹" src="https://img2.secretchina.com/pic/2019/2-14/p2362201a104326723-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   澳籍华裔作家杨恒均。（图片来源：推特）
+   中国外交部发言人华春莹（图片来源：中国外交部官网）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,139 +21,135 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月13日讯】(看中国记者苗薇综合报导)曾在中国外交部任职、现已入籍澳洲的网络作家
+  【看中国2020年12月8日讯】（看中国记者黎小葵综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/杨恒均" target="_blank">
-    杨恒均
+   美国
+  </strong>
+  计划再
+  <strong>
+   制裁
+  </strong>
+  14名
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/中国官员" target="_blank">
+    中国官员
    </span>
   </strong>
-  （原名杨军），早前因涉嫌从事危害国家安全犯罪活动，被扣留审查。外交部发言人
+  ，以回应北京当局11月褫夺4名
   <strong>
-   赵立坚
+   香港
   </strong>
-  昨日表示，北京市检察院10月7日以
+  立法会
   <strong>
-   间谍罪
+   议员
   </strong>
-  对杨恒均提起公诉，案件已转至北京市第二中级法院，目前正在一审中。
+  资格的行动。对此，中国外交部发言人华春莹7日在例行记者会上气得“跳脚”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  澳洲籍华裔网络作家杨恒均于2019年1月他搭机抵达广州时，在机场遭到中国公安人员带走。
-  <span href="https://zh.wikipedia.org/wiki/%E6%A5%8A%E6%81%92%E5%9D%87" target="_blank">
-   杨恒均
+  香港政府11月11日按照中共中央人大常委会决定，宣布4名立法会议员杨岳桥、郭荣铿、郭家麒及梁继昌即时丧失立法会议员资格。相关消息引起各界关注。英国路透社独家报导，美国财政部12月7日正式公布制裁14名中港官员名单，分别为蔡达峰、陈竺、曹建明、白玛赤林、丁仲礼、郝明金、艾力更．依明巴海、吉炳轩、沈跃跃、万鄂湘、王东明、王晨、武维华与张春贤。全数为中国全国人大常委会副委员长，也是美国在《港区国安法》上路后第4度宣布对中港制裁。
+ </p>
+ <p>
+  路透社6日的报导曾指出，美国的制裁行为将包括冻结资产与禁止部分金融交易行为。彭博社7日则报导，最新制裁对象可能包含中国国务院副总理韩正和全国人大常务委员会委员长栗战书，但最后两人未被列于制裁名单中。
+ </p>
+ <p>
+  对此，中国外交部发言人华春莹7日在例行记者会上回应，“如果报导是属实的话，也可以想见中方的立场。”她强调中方已多次表明，中国坚决反对并强烈谴责美方干涉中国内政，中方也将采取“反制措施”。
+ </p>
+ <p>
+  另据中国媒体报导，华春莹还在会上宣称，“我也想藉这个机会可以再多说几句，希望路透社也可以加以充分报导。你知道，公职人员宣誓效忠国家制度是国际的惯例……作为中国香港特区的公职人员，立法会的议员当然必须要真诚地拥护中华人民共和国香港特别行政区基本法，效忠中华人民共和国香港特别行政区。……我想没有任何一个国家会对包括议员在内的公职人员违背誓言、背叛国家的行径视而不见。”
+ </p>
+ <p>
+  中共官方的一系列言行引发外界高度关注与探讨。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  众所周知，11月18日由美国、英国、加拿大、新西兰和澳大利亚组成的情报联盟“五眼联盟”，就香港议题发表联合声明谴责中共政府。而中国外交部发言人赵立坚竟于11月19日爆粗口要“戳瞎”五眼联盟，其暴力和野蛮程度让在场媒体惊愕。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  11月9日，美国国务院宣布制裁中港4名官员后，中方扬言也做出对等制裁，将在涉港问题上制裁4名美方人员。但后来外界发现，中共官方宣称的被制裁者都是民间机构的人员。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  8月7日，因中共通过《香港版国安法》动摇香港的一国两制，美国通过《香港自治法》（Hong Kong Autonomy Act），制裁破坏香港自治的中国和香港官员，包括香港特首林郑月娥、特首办主任兼国安委秘书长陈国基、律政司司长郑若骅、保安局局长李家超、政制及大陆事务局局长曾国卫、警务处处长邓炳强、警务处前处长卢伟聪、中联办主任骆惠宁、港澳办主任夏宝龙、港澳办副主任张晓明，及国安公署署长郑雁雄。这其中4名为中共涉港官员，7人是香港政府官员。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对此，中共官方于同月11日扬言作出反击，称即日起制裁11名“涉港表现恶劣”的美方人士，但制裁内容并未做详细说明。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此外，早在今年7月，
+  <span href="https://www.secretchina.com/news/gb/tag/美国制裁" target="_blank">
+   美国制裁
   </span>
-  已被中国当局监禁超过21个月。
- </p>
- <p>
-  据法广10月13日报导，中国外交部发言人赵立坚12日例行记者会上表示，澳洲籍作家杨恒均（杨军）已经在10月7日被以
-  <span href="https://www.secretchina.com/news/gb/tag/间谍罪" target="_blank">
-   间谍罪
-  </span>
-  提起公诉。
- </p>
- <p>
-  报导指出，在过去一个月期间，律师已经与杨恒均会面两次，杨恒均对律师表示自己是无辜的，并将战斗到底。他在一封给家人的信中表示说：“我永远不会承认自己没有做过的事情”。
- </p>
- <p>
-  在两次会面中，他还曾表示，自己在被拘押期间遭受多次长时间审讯，审讯时还被带手铐脚炼与口罩眼罩，自己健康状况每况愈下，甚至出现了心脏问题。他的律师尚宝军指，杨恒均在被关押期间面临酷刑审讯。
- </p>
- <p>
-  杨恒均的妻子袁小靓（网名染香）近日接受澳广采访时表示，听到这对丈夫的指控后感到很无助，“现在没有人可以帮助他，澳洲政府也不能帮助他，我们必须遵守
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  的法律。” 她续指，丈夫被正式起诉到法院，根据起诉书的建议，中国当局列出5项罪名，但由于保密协议，律师无法透露任何细节。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2019年4月，海外社交媒体上传出袁小靓透过澳洲媒体哭诉丈夫被抓的一段视频。她在镜头前哭诉杨恒均如何被当局带走，家属和律师都不让见，自称“现在处于很崩溃的状态”。她提到，杨恒均被抓后，随丈夫一起回国的袁小靓也被中共限制在上海，不能离境。她呼吁澳大利亚政府关注自己的公民在海外的人权状况，求西方的民主制度来救她家人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  自从杨恒均被捕后，袁小靓曾三次购买机票试图离开中国，但都被中共海关拦下。袁小靓是澳大利亚永久居民。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  现年55岁的杨恒均，1987年毕业于上海复旦大学，随后进入中国外交部和国安部工作，也曾在海南省政府任职。1992年被调职香港一家中国国有企业，直到1997年香港主权移交为止，杨恒均于2000年入籍澳洲，以作家身份活跃在网络上，自称“民主小贩”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  杨恒均被曝是“老国安”，围绕他的被捕，有观点认为涉及中共内斗。香港《明报》去年3月20日引述北京消息透露，中国情报机构国家安全部长期由
-  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
-   江泽民
-  </span>
-  的人马掌控。2016年11月，前中纪委副书记陈文清出任中共国安部长后，着手改组国安部并清洗曾效忠“江派”的海外情报人员，而杨恒均就属被清理之列。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此前有澳洲公民在推特上发出一张原本是杨恒均发布在自己微博上的照片，是关于杨2014年参加中共建政65周年招待会的照片，该招待会有中共前任党魁及现任党魁出席，这并不是一般学者能参加的。
+  4名涉新疆高官和新疆政府机构后，华春莹也曾宣布要制裁4名美国官员和政府机构。但当时华春莹所谓的制裁也是无具体制裁细节。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -185,7 +181,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -217,13 +213,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949117.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949117.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949117.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949117.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955028.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955028.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955028.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/955028.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949117.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955028.md' width='0px' height='0px'/>
